Added `schemaForObjectClass` to the plugin configuration.